estabilização dos tipos de busca
