# src/core/api/to_de_taxi/models/solicitacao-corrida-summary.ts
@@ -13,5 +13,6 @@ export interface SolicitacaoCorridaSummary {
   tempoDisponivel?: number;
   valorEstimado?: number;
   valorProposto?: number;
+  isInterUrbano?: boolean;
   situacao?: 0 | 1 | 2 | 3 | 4;
 }
